Improve startup parameter